--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,46 +8,50 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="greed.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header class="header">
         <div class="container">
-            <div class="row">
-                <div class="col-md-3">
+            <div class="row header-row">
+                <div class="col-xs-12 col-sm-3">
                     <div class="logo">
-                        <a href=""><img src="logo.png" alt=""> </a>
+                        <a href="">
+                            <img src="images/logo.png">
+                        </a>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <nav>
-                        <ul class="menu">
-                            <li><a href="" id="home">HOME</a></li>
-                            <li><a href="">ABOUT</a></li>
-                            <li><a href="">WORK</a></li>
-                            <li><a href="">TEAM</a></li>
-                            <li><a href="">SERVICES</a></li>
-                            <li><a href="">FEATURES</a></li>
-                            <li><a href="">CONTACT</a></li>
-                        </ul>
+                <div class="col-xs-12 col-sm-7">
+                    <nav class="menu">
+                        <div class="item">Home</div>
+                        <div class="item">About</div>
+                        <div class="item">Work</div>
+                        <div class="item">Team</div>
+                        <div class="item">Services</div>
+                        <div class="item">Features</div>
+                        <div class="item">Contact</div>
                     </nav>
                 </div>
-                <div class="col-md-3">
-                    <div class="row">
-                    <form action="">
-                        <input type="text" placeholder="search" class="input-search">
-                        <button type="submit" class="btn-search">
-                            <img src="search.png" alt=""/>
-                        </button>
-                    </form> 
-                </div>
-                </div>
+                <div class="col-xs-hidden col-sm-2">Search</div>
             </div>
         </div>
     </header>
-    
+<main>
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">We are modest</div>
+                <div class="col-xs-12 col-md-7">text</div>
+                <div class="col-xs-12 col-md-5">list</div>
+            </div>
+        </div>
+    </section>
+</main>
 </body>
+
 </html>
