--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                 </div>
                 <div class="col-xs-12 col-sm-7">
                     <nav class="menu">
-                        <div class="item">Home</div>
-                        <div class="item">About</div>
-                        <div class="item">Work</div>
-                        <div class="item">Team</div>
-                        <div class="item">Services</div>
-                        <div class="item">Features</div>
-                        <div class="item">Contact</div>
+                        <div class="item"><a href="">Home</a></div>
+                        <div class="item"><a href="">About</a></div>
+                        <div class="item"><a href="">Work</a></div>
+                        <div class="item"><a href="">Team</a></div>
+                        <div class="item"><a href="">Services</a></div>
+                        <div class="item"><a href="">Features</a></div>
+                        <div class="item"><a href="">Contact</a></div>
                     </nav>
                 </div>
                 <div class="col-xs-hidden col-sm-2">
@@ -477,22 +477,7 @@
         </section>
     </main>
     <footer>
-        <div class="container-gray">
-        <div class="row">
-            <div class="col-xs-12 col-md-6">
-                <div class="all-rights">© Copyright 2014 by PSD Booster. All Rights Reserved.</div>
-            </div>
-            <div class="col-xs-12 col-md-6">
-                <div class="footer-social">
-                <img src="images/twitter.png" alt="">
-                <img src="images/facebook.png" alt="">
-                <img src="images/skype.png" alt="">
-                <img src="images/be.png" alt="">
-                <img src="images/in.png" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
+        
     </footer>
 </body>
 
