--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="greed.css">
+    <script src="app.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -462,7 +463,7 @@
                                 </div>
                                 <div class="col-xs-12">
                                     <label for="message">message</label>
-                                    <textarea name="message" class="your-message" cols="30" rows="30"></textarea>
+                                    <textarea name="message" class="your-message"></textarea>
                                 </div>
 
                                 <div class="button-send">
