--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="greed.css">
-    <script src="app.js"></script>
-
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
@@ -45,6 +44,11 @@
                         <div class="item"><a href="">Features</a></div>
                         <div class="item"><a href="">Contact</a></div>
                     </nav>
+                    <div class="nav-mobile-menu">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
                 </div>
                 <div class="col-xs-hidden col-sm-2">
                     <div class="search">
@@ -499,6 +503,7 @@
         </div>
         </div>
     </footer>
+    <script src="app.js"></script>
 </body>
 
 </html>
